Upgrade to Rails 7.0.6
Whew! Seems like a pretty clean one? Ran `rails app:upgrade` and stuff, and made some corrections to keyword arguments for `translate` calls. There might be more such problems elsewhere? But that's hard to search for, and we'll have to see.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,7 +27,7 @@
       = yield :before_title
       - if content_for?(:title) && show_title_header?
         %h1#title= yield :title
-      = render 'static/announcement.html'
+      = render 'static/announcement'
       = yield :before_flashes
       = flashes
 
