Use flash[:notice] instead of flash[:success]
This is a bit more standard, and has the bonus of being compatible with Devise, which is using `flash[:notice]` and so its flashes were coming out unstyled, oops!

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -124,10 +124,10 @@ ul.buttons
   padding: .25em .5em
   text-align: center
 
-.success, .alert, .warning
+.notice, .alert, .warning
   +flash
 
-.success
+.notice
   +notice
 
 .alert
