--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,7 +48,8 @@
           = link_to t('.userbar.items'), user_closet_hangers_path(current_user), :id => 'userbar-items-link'
           = link_to t('.userbar.outfits'), current_user_outfits_path
           = link_to t('.userbar.settings'), edit_auth_user_registration_path
-          = button_to t('.userbar.logout'), destroy_auth_user_session_path, method: :delete
+          = button_to t('.userbar.logout'), destroy_auth_user_session_path, method: :delete,
+            params: {return_to: request.fullpath}
         - else
           = link_to auth_user_sign_in_path_with_return_to, :id => 'userbar-log-in' do
             %span= t('.userbar.login')
