Bundle wardrobe-2020 into the app
We add jsbuilding-rails to get esbuild running in the app, and then we copy-paste the files we need from impress-2020 into here!

I stopped at the point where it was building successfully, but it's not running correctly: it's not sure about `process.env` in `next`, and I think the right next step is to delete the NextJS deps altogether and use React Router instead.

--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -265,4 +265,5 @@
   = include_javascript_libraries :jquery, :swfobject, :jquery_tmpl
   = javascript_include_tag 'ajax_auth', 'jquery.jgrowl', 'wardrobe',
                            'ZeroClipboard.min', 'outfits/edit'
+  = javascript_include_tag 'wardrobe-2020-page', defer: true
 
