Add wardrobe-2020 outfit preview to item pages
Eyyy tasty! There were some issues with conflicting styles with the main app, but I think we got it!

Scoping Chakra's CSS reset was a big deal to not accidentally overwrite the app's own styles lol, and we had to solve a specificity problem for that, thanks Aria for the :where tip!! <3

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -91,6 +91,8 @@ input[type=text], input[type=password], input[type=search], input[type=number], 
 textarea
   font: inherit
 
+// TODO: This conflicts with button styles in embedded wardrobe-2020
+// components. It'd be nice to not apply it to ALL button elements.
 a.button, input[type=submit], button
   +awesome-button
   &.loud
