--- a/app/assets/stylesheets/partials/clean/_mixins.sass
+++ b/app/assets/stylesheets/partials/clean/_mixins.sass
@@ -53,7 +53,7 @@
   &:hover
     color: #fff
   &:active
-    top: 1px
+    transform: translateY(1px)
 
 =reset-awesome-button
   +border-radius(0)
