Fix typography on wardrobe 2020 page
Add the green body color back in, and add the Delicious font!

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -1,4 +1,5 @@
 @import "partials/icon"
+@import fonts
 @import url(//fonts.googleapis.com/css?family=Droid+Sans:400,700)
 @import url(//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic)
 @import url(//fonts.googleapis.com/css?family=Calligraffitti)
