--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -4,6 +4,7 @@
     %meta{charset: 'utf-8'}
     %title Dress to Impress
     %link{href: image_path('favicon.png'), rel: 'icon'}
+    = stylesheet_link_tag 'fonts'
     = javascript_include_tag 'wardrobe-2020-page', defer: true
   %body
     #wardrobe-2020-root
