Remove compass-rails
I wasn't sure what we were actually using it for, turns out it was mostly polyfills for CSS features that are very standard now!

I didn't audit these changes very carefully tbqh because they seemed pretty simple? Fingers crossed!

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -81,7 +81,7 @@ input, button, select, label
   cursor: pointer
 
 input[type=text], input[type=password], input[type=search], input[type=number], select, textarea
-  +border-radius(3px)
+  border-radius: 3px
   background: #fff
   border: 1px solid $input-border-color
   color: $text-color + #444444
