--- a/app/assets/stylesheets/partials/_assets-list.sass
+++ b/app/assets/stylesheets/partials/_assets-list.sass
@@ -1,6 +1,6 @@
 =assets-list
   li
-    +border-radius(.5em)
+    border-radius: .5em
     +inline-block
     border: 1px solid $soft-border-color
     margin: .5em
