--- a/app/assets/stylesheets/partials/_campaign-progress.sass
+++ b/app/assets/stylesheets/partials/_campaign-progress.sass
@@ -11,7 +11,7 @@ $campaign-link-color: $campaign-text-color + #222
 
 =campaign-progress
   .campaign-progress-wrapper
-    +border-radius(8px)
+    border-radius: 8px
     background: desaturate(lighten($campaign-border-color, 30%), 30%)
     background-image: linear-gradient(color-stops(desaturate(lighten($campaign-border-color, 50%), 30%), desaturate(lighten($campaign-border-color, 30%), 30%)))
 
