--- a/app/assets/stylesheets/outfits/_new.sass
+++ b/app/assets/stylesheets/outfits/_new.sass
@@ -172,7 +172,7 @@ body.outfits-new
         display: inline-block
 
       li
-        +border-radius(6px)
+        border-radius: 6px
         border: 1px solid $soft-border-color
         line-height: 1
         margin: 0 4px
@@ -256,8 +256,8 @@ body.outfits-new
 
         button
           +reset-awesome-button
-          +border-radius(4px)
-          +box-shadow(0 1px 3px rgba(0, 0, 0, .5))
+          border-radius: 4px
+          box-shadow: 0 1px 3px rgba(0, 0, 0, .5)
           background: $module-bg-color
           border: 1px solid $module-border-color
           padding-right: 8px
