Upgrade to latest Sass and Sprockets
This required a buncha fixes to how SASS scoping works! Needed to add a bunch of imports for stuff that previously would get read from the global scope by being imported *after* the constants and mixins etc.

There's clearly a lot of refactor opportunity here, but I'm not gonna worry about it!!

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -1,8 +1,10 @@
 @import "partials/icon"
+@import "partials/clean/constants"
+@import "partials/clean/mixins"
 @import fonts
-@import url(//fonts.googleapis.com/css?family=Droid+Sans:400,700)
-@import url(//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic)
-@import url(//fonts.googleapis.com/css?family=Calligraffitti)
+@import url("https://fonts.googleapis.com/css?family=Droid+Sans:400,700")
+@import url("https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic")
+@import url("https://fonts.googleapis.com/css?family=Calligraffitti")
 
 /* Reset
 
