--- a/app/assets/stylesheets/campaigns/_show.sass
+++ b/app/assets/stylesheets/campaigns/_show.sass
@@ -1,3 +1,4 @@
+@import "partials/clean/constants"
 @import "partials/campaign-progress"
 @import "partials/outfit"
 
@@ -198,7 +199,7 @@ body.campaigns-show, body.campaigns-current
         line-height: 100px
         margin: 4px 0
         text-shadow: #335 2px 2px 1px
-        width: $container-width - 4px
+        width: 800px - 4px
 
         span
           +inline-block
