--- a/app/assets/stylesheets/closet_hangers/_index.sass
+++ b/app/assets/stylesheets/closet_hangers/_index.sass
@@ -1,3 +1,5 @@
+@import "../partials/clean/constants"
+@import "../partials/campaign-progress"
 @import "../partials/context_button"
 @import "../partials/icon"
 @import "../partials/secondary_nav"
@@ -380,7 +382,7 @@ body.closet_hangers-index
         font-size: 85%
         padding: .5em 1em
         text-align: center
-        width: $container-width
+        width: 800px
 
         &.isStuck
           border-bottom: 1px solid $module-border-color
