--- a/app/assets/stylesheets/closet_hangers/_petpage.sass
+++ b/app/assets/stylesheets/closet_hangers/_petpage.sass
@@ -1,3 +1,7 @@
+@import "../partials/clean/constants"
+@import "../partials/clean/mixins"
+@import "../partials/secondary_nav"
+
 body.closet_hangers-petpage
   +secondary-nav
 
