--- a/app/assets/stylesheets/neopets_page_import_tasks/_new.sass
+++ b/app/assets/stylesheets/neopets_page_import_tasks/_new.sass
@@ -1,5 +1,6 @@
-body.neopets_page_import_tasks-new, body.neopets_page_import_tasks-create
+@import "../partials/clean/mixins"
 
+body.neopets_page_import_tasks-new, body.neopets_page_import_tasks-create
   #title
     float: left
 
