--- a/app/assets/stylesheets/closet_lists/_form.sass
+++ b/app/assets/stylesheets/closet_lists/_form.sass
@@ -1,3 +1,5 @@
+@import "../partials/secondary_nav"
+
 body.closet_lists-new, body.closet_lists-create, body.closet_lists-edit, body.closet_lists-update
   +secondary-nav
 
