--- a/app/assets/stylesheets/donations/_show.sass
+++ b/app/assets/stylesheets/donations/_show.sass
@@ -1,3 +1,6 @@
+@import "../partials/clean/constants"
+@import "../partials/clean/mixins"
+
 body.donations-show
   #thank-you
     border: 3px solid $module-border-color
