Add the Pardon Our Dust page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -23,6 +23,7 @@
 @import outfits/show
 @import pets/bulk
 @import static/image_mode
+@import static/pardon_our_dust
 @import static/terms
 @import swf_assets/links
 @import users/top_contributors
