Stop referencing Neopia, just do modeling inline
I hope this doesn't cause problems! But yeah, with Puma doing threading, and maybe switching to Falcon someday to get even better concurrency properties, I feel like this will probably be fine?

And it makes the UX a loootttt better, to be back in the world where all these forms just work, whew.

--- a/app/assets/stylesheets/outfits/_new.sass
+++ b/app/assets/stylesheets/outfits/_new.sass
@@ -35,7 +35,7 @@ body.outfits-new
     a
       color: #0a58ca
 
-  #pet-not-found, #neopia-error
+  #pet-not-found
     display: none
 
   #outfit-forms
@@ -93,15 +93,6 @@ body.outfits-new
         font-size: 175%
       select
         font-size: 120%
-    [data-require-neopia-status=offline]
-      display: none
-    &[data-neopia-status=offline]
-      [data-require-neopia-status=online]
-        display: none
-      [data-require-neopia-status=offline]
-        display: block
-    [data-require-neopia-status=offline] .load-pet-to-wardrobe legend a
-      font-size: 85%
   #description, #top-contributors
     float: left
   #description
